# ebbingflow

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README-EN.md  README-ZH.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  config.py  data_reset.bat  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat
.github/: pull_request_template.md
api/: __init__.py  server.py
bridge/: __init__.py  llm.py
core/: chat_engine.py  middleware.py  monitoring.py  session.py
demo_data/: replay_story_demo.py  zhuge_hegemony_final.jsonl
docs/: PROMPT_GUIDELINE.md
frontend/: chat_interaction.html  data_monitor.html
integrations/: qq_bot.py
memory/: knowledge_engine.py
reports/: README.md  m2_quality_metrics.json  release_closure_report.json  release_closure_report.md
scripts/: audit_identity_state.py  backup_system.py  clear_all_data.py  devour_document.py  graph_compactor.py  graph_janitor.py  initialize_neo4j.py  release_closure_check.py  restore_system.py  setup_db.py  verify.py  view_memory_snapshot.py
tests/: README.md  conftest.py  test_bitemporal_windowing.py  test_cdc_outbox.py  test_chat_engine_role_label.py  test_confidence_tuning.py  test_conflict_arbitration.py  test_crm_e2e_mock.py  test_crm_sync_protocol.py  test_entity_resolution.py  test_event_evidence_chain.py  test_extractor_pronouns.py  test_forgetting_curve.py  test_graph_compactor.py  test_m2_episode.py  test_persona_manager_dynamic_props.py  test_personality_audit_settlement.py  test_plan_memory_retrieval.py  test_profile_field_contract.py  (+12 more)
(+37 files in other folders)
